# funpedals

./: Cargo.toml  LICENSE  README.md  README_ja.md
doc/: .gitkeep
src/: main.rs
