[package]
name = "funpedals"
version = "1.0.0"
edition = "2024"  # Rust edition (language version), not funpedals version

[dependencies]
fundsp = "0.23"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"
ringbuf = "0.4"
sdl2 = { version = "0.36", features = ["ttf"] }

[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.15"
